# LibertoTube

./: Cargo.toml  checkers.json  package-lock.json  proxies.json
LibertoTubeBack/: .gitignore  Cargo.toml
LibertoTubeBack/src/: checker.rs  main.rs
LibertoTubeFront/: package-lock.json  package.json
LibertoTubeFront/src/: app.html
LibertoTubeFront/src/routes/: +page.svelte  AnimatedText.svelte  FancyInput.svelte  StatusItem.svelte
LibertoTubeTelegram/: main.py  shell.nix
src/: checker.rs  controller.rs  main.rs  utils.rs
